Bug 1930907 - Allow replacing transitions that are not running on the compositor. r=boris,birtles

This improves the behavior significantly. Transitions that are not
running on the compositor but are throttled on the main thread due to
being scrolled out of view have the same issue as compositor animations.

Differential Revision: https://phabricator.services.mozilla.com/D229026